--- a/KarácsonyiWeboldal/index.html
+++ b/KarácsonyiWeboldal/index.html
@@ -2,7 +2,6 @@
 <html lang="hu">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./kepek/logo.png" alt="logo" class="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="./kepek/logo.png" alt="logo" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -25,22 +24,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Főoldal</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Főoldal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Ajándékok</a>
+                            <a class="nav-link" href="gift.html">Ajándékok</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Díszek</a>
+                            <a class="nav-link" href="decoration.html">Díszek</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Desszertek</a>
+                            <a class="nav-link" href="dessert.html">Desszertek</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Rólunk</a>
+                            <a class="nav-link" href="about.html">Rólunk</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Kapcsolat</a>
+                            <a class="nav-link" href="contact.html">Kapcsolat</a>
                         </li>
 
                     </ul>
@@ -63,15 +62,107 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nihil similique fugit unde,
                                 sint inventore numquam. Quisquam laboriosam voluptatem, voluptatibus cupiditate rem,
                                 commodi modi, sequi delectus eligendi labore eaque veniam.</p>
-                            <button>Vásárlás</button>
+                            <button class="vasarlas">Vásárlás</button>
                         </div>
 
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <h2>Termék kategóriák</h2>
+            <div class="row categorys">
+                <div class="col category">
+                    <a href="gift.html"><img src="./kepek/gift.webp" alt="" class="category_img">
+                        <h3 class="category_name">Ajándék</h3>
+                    </a>
+                </div>
+
+                <div class="col category">
+                    <a href="dessert.html">
+                        <img src="./kepek/dessert.webp" alt="" class="category_img">
+                        <h3 class="category_name">Desszert</h3>
+                    </a>
+                </div>
+                <div class="col category">
+                    <a href="decoration.html">
+                        <img src="./kepek/decorations.webp" alt="" class="category_img">
+                        <h3 class="category_name">Dekoráció</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h2>Kedvenc termékek</h2>
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./kepek/kedvenc1.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./kepek/kedv2.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./kepek/kedv3.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./kepek/kedv5.webp" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./kepek/kedv4.jpg" class="d-block w-100" alt="...">
+                        </div>
+
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row contact">
+            <h2>Elérhetőség</h2>
+            <div class="col">
+                <img src="./kepek/contactpicture.webp" alt="">
+            </div>
+            <div class="col">
+                <h2>Ha kérdése lenne: </h2>
+                <p class="contact_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex delectus
+                    laudantium, explicabo
+                    necessitatibus enim a et nemo minus tempore quos tempora.</p>
+                <button class="contact_button" href="contact.html">Elérhetőség</button>
+            </div>
+        </div>
+
+
     </div>
 
+    <footer>
+        Christmas gift company &nbsp; 2024
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
